--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^5.0.0",
     "vue-cli-plugin-element-plus": "0.0.13",
     "vue-cli-plugin-sass-resources-loader": "^1.0.0"
   },
